# pachislo-datacounter

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  diagram.json  partitions.csv  sdkconfig  sdkconfig.defaults  wokwi.toml
main/: CMakeLists.txt  app_main.c  data_model.c  display_manager.c  input_monitor.c  nvs_storage.c  web_server.c  wifi_manager.c
main/include/: app_config.h  data_model.h  display_manager.h  input_monitor.h  nvs_storage.h  web_server.h  wifi_manager.h  wifi_secrets.h.example  xiao_pinmap.h
